--- a/doc/docs/501.mdx
+++ b/doc/docs/501.mdx
@@ -18,7 +18,7 @@ import Highlight from '@site/src/components/Highlight.js';
 网关提供灵活的脚本式配置转换，可以在变量的读取表达式中进行配置转换 
 如果要设置小数位为2，可以填入 
 ```
-Math.Round(raw, 2)
+Math.Round(raw.ToDecimal(), 2)
 ```
 
 #### 3、源码打开razor文件时，不出现智能提示，有waring警告(波浪线)
