--- a/src/ThingsGateway.Admin.Application/Locales/zh-CN.json
+++ b/src/ThingsGateway.Admin.Application/Locales/zh-CN.json
@@ -1,4 +1,10 @@
 ﻿{
+  "ThingsGateway.FileService": {
+    "FileNullError": "文件不能为空",
+    "FileLengthError": "文件大小不允许超过 {0} M",
+    "FileTypeError": "不支持 {0} 格式"
+  },
+
   "ThingsGateway.Admin.Application.APPInfo": {
     "Environment": "主机环境",
     "FrameworkDescription": "NET框架",
