--- a/src/tools/ThingsGateway.Foundation.Razor/Locales/en-US.json
+++ b/src/tools/ThingsGateway.Foundation.Razor/Locales/en-US.json
@@ -1,5 +1,40 @@
 ﻿{
-  
+  "ThingsGateway.Debug.ChannelDataDebugComponent": {
+    "Name": "Name",
+    "Name.Required": "{0} cannot be empty",
+    "ChannelType": "Channel Type",
+    "Enable": "Enable",
+    "LogEnable": "Enable Debug Log",
+    "RemoteUrl": "Remote IP Address",
+    "BindUrl": "Local Bind IP Address",
+    "PortName": "COM Port",
+    "BaudRate": "Baud Rate",
+    "DataBits": "Data Bits",
+    "Parity": "Parity",
+    "StopBits": "Stop Bits",
+    "DtrEnable": "Dtr",
+    "RtsEnable": "Rts",
+    "RemoteUrlNotNull": "Remote IP Address cannot be empty",
+    "BindUrlNotNull": "Local Bind IP Address cannot be empty",
+    "BindUrlOrRemoteUrlNotNull": "Remote IP Address or Local Bind IP Address cannot be empty",
+    "PortNameNotNull": "COM Port cannot be empty",
+    "BaudRateNotNull": "Baud Rate cannot be empty",
+    "DataBitsNotNull": "Data Bits can be empty",
+    "ParityNotNull": "Parity cannot be empty",
+    "StopBitsNotNull": "Stop Bits cannot be empty",
+    "SaveChannel": "Add/Modify Channel",
+    "DeleteChannel": "Delete Channel",
+    "ClearChannel": "Clear Channel",
+    "ExportChannel": "Export Channel",
+    "ImportChannel": "Import Channel",
+    "ImportNullError": "Unable to recognize",
+    "NotOther": "Not supporting other channel types",
+    "Connect": "Connect",
+    "Confim": "Confim",
+    "Disconnect": "Disconnect",
+    "Channel": "Channel"
+  },
+
   "ThingsGateway.Debug.AdapterDebugBase": {
     "WriteSuccess": "Write Successful",
     "DefaultSend": "Direct Send",
@@ -30,5 +65,4 @@
     "BasicInformation": "Basic Information",
     "Connection": "Connection"
   }
-  
 }
