--- a/doc/docs/upgrade.mdx
+++ b/doc/docs/upgrade.mdx
@@ -8,6 +8,22 @@ import Tag from "@site/src/components/Tag.js";
 import Highlight from '@site/src/components/Highlight.js';
 
 
+## v6.0(最新)
+
+**更新描述：**
+
+此版本是大版本更新。可能会产生很多不兼容部分，所以升级之前请做好备份。
+
+请参考5.0升级操作进行
+
+**更新详情：**
+
+- &nbsp;<Tag>调整</Tag> 更换UI组件
+- &nbsp;<Tag>调整</Tag> 多语言框架构建，内嵌中英语言资源
+- &nbsp;<Tag>调整</Tag> 代码架构重整
+
+
+具体升级详情请查看链接  **https://github.com/kimdiego2098/ThingsGateway/compare/v5...master**
 
 
 ## v5.0.0.1
