--- a/src/plugin/ThingsGateway.Plugin.Dlt645/Locales/zh-CN.json
+++ b/src/plugin/ThingsGateway.Plugin.Dlt645/Locales/zh-CN.json
@@ -4,7 +4,8 @@
     "OperCode": "操作员代码",
     "Password": "写入密码",
     "Station": "通讯地址",
-    "DtuId": "默认DtuId",
+    "DtuId": "Dtu注册包(UTF8)",
+    "HeartbeatTime": "心跳间隔时间",
 
     "HeartbeatHexString": "心跳验证(HexString)",
     "DataFormat": "解析规则",
