feat: mqtt脚本添加检查按钮

--- a/src/ThingsGateway.Gateway.Razor/Locales/en-US.json
+++ b/src/ThingsGateway.Gateway.Razor/Locales/en-US.json
@@ -93,7 +93,8 @@
     "BasicInformation": "Basic Information",
     "Connection": "Connection",
     "Redundant": "Redundant",
-    "Remark": "Remark"
+    "Remark": "Remark",
+    "Check": "Check"
   },
   "ThingsGateway.Gateway.Razor.VariableEditComponent": {
     "VariableInformation": "Variable Information",
