--- a/src/ThingsGateway.Gateway.Application/Locales/en-US.json
+++ b/src/ThingsGateway.Gateway.Application/Locales/en-US.json
@@ -93,6 +93,7 @@
     "WriteExpressions": "WriteExpressions",
     "RpcWriteEnable": "RpcWriteEnable",
 
+    "AlarmDelay": "AlarmDelay",
     "BoolOpenAlarmEnable": "BoolOpenAlarmEnable",
     "BoolOpenRestrainExpressions": "BoolOpenRestrainExpressions",
     "BoolOpenAlarmText": "BoolOpenAlarmText",
@@ -336,6 +337,7 @@
     "ReadExpressions": "ReadExpressions",
     "WriteExpressions": "WriteExpressions",
     "RpcWriteEnable": "RpcWriteEnable",
+    "AlarmDelay": "AlarmDelay",
     "BoolOpenAlarmEnable": "BoolOpenAlarmEnable",
     "BoolOpenRestrainExpressions": "BoolOpenRestrainExpressions",
     "BoolOpenAlarmText": "BoolOpenAlarmText",
