--- a/doc/docs/upgrade.mdx
+++ b/doc/docs/upgrade.mdx
@@ -26,6 +26,54 @@ import Highlight from '@site/src/components/Highlight.js';
 具体升级详情请查看链接  **https://github.com/kimdiego2098/ThingsGateway/compare/v5...master**
 
 
+### 6.0.5.14
+
+- &nbsp;<Tag>新增</Tag> 添加报警延时逻辑
+- &nbsp;<Tag>新增</Tag> mqtt脚本添加检查按钮
+- &nbsp;<Tag>优化</Tag> opcuaMaster 服务端时间戳选项在轮询模式下不生效
+- &nbsp;<Tag>优化</Tag>  aop插入日志ip字段 非null
+
+### 6.0.5.13
+
+- &nbsp;<Tag>优化</Tag>  修改用户中心的修改密码为密码输入框
+- &nbsp;<Tag>优化</Tag>  opcua轮询采集时异常捕获内容包含当前读取地址
+
+### 6.0.5.12
+
+- &nbsp;<Tag>优化</Tag>  更新依赖项
+- &nbsp;<Tag>调整</Tag>  修改构建脚本
+- &nbsp;<Tag>调整</Tag>  添加arm64 docker镜像
+
+
+### 6.0.5.10
+
+- &nbsp;<Tag>优化</Tag>  photino版本退出时释放资源
+- &nbsp;<Tag>新增</Tag>  添加winform版本
+
+### 6.0.5.7
+
+- &nbsp;<Tag>优化</Tag> 设备PluginType属性增加多语言资源键值
+- &nbsp;<Tag>修复</Tag> 权限框架解决方案编译错误
+- &nbsp;<Tag>优化</Tag> index 首页 页面文件迁移至主程序
+- &nbsp;<Tag>优化</Tag>更新依赖包
+
+### 6.0.5.5
+
+- &nbsp;<Tag>修复</Tag> newlife.x工具库部分命名空间错误
+- &nbsp;<Tag>优化</Tag> DtuId属性描述添加'UTF8'
+- &nbsp;<Tag>优化</Tag> 更新依赖项
+
+### 6.0.5.1
+
+- &nbsp;<Tag>优化</Tag> 分离部分代码
+- &nbsp;<Tag>优化</Tag> 调整代码架构，分出blaor server与blazor hybrid架构的服务代码
+
+### 6.0.4.60
+
+- &nbsp;<Tag>优化</Tag> 支持全局按钮权限
+- &nbsp;<Tag>优化</Tag> 修改服务类插件启动错误后的等待间隔时间
+
+
 ## v5.0.0.1
 > 2024-1-21
 
