--- a/src/ThingsGateway.Server/Locales/zh-CN.json
+++ b/src/ThingsGateway.Server/Locales/zh-CN.json
@@ -36,7 +36,9 @@
     "实时报警": "实时报警",
     "网关日志": "网关日志",
     "后台日志": "后台日志",
-    "RPC日志": "RPC日志"
+    "RPC日志": "RPC日志",
+    "物联网关": "物联网关",
+    "系统管理": "系统管理"
   },
 
 
