--- a/doc/docs/upgrade.mdx
+++ b/doc/docs/upgrade.mdx
@@ -26,6 +26,11 @@ import Highlight from '@site/src/components/Highlight.js';
 具体升级详情请查看链接  **https://github.com/kimdiego2098/ThingsGateway/compare/v5...master**
 
 
+### 6.0.5.21
+
+- &nbsp;<Tag>新增</Tag> mqtt协议适配thingsboard
+
+
 ### 6.0.5.16
 
 - &nbsp;<Tag>调整</Tag> questdb初始化失败时更新的时间为格里威治时间
