--- a/doc/docs/upgrade.mdx
+++ b/doc/docs/upgrade.mdx
@@ -25,6 +25,11 @@ import Highlight from '@site/src/components/Highlight.js';
 
 具体升级详情请查看链接  **https://github.com/kimdiego2098/ThingsGateway/compare/v5...master**
 
+### 6.0.5.23
+
+- &nbsp;<Tag>新增</Tag> 基础库增加 net8 编译项
+- &nbsp;<Tag>调整</Tag> 默认server gc true，如有低内存需要，更改 MSBuild 项
+
 
 ### 6.0.5.21
 
