--- a/doc/docs/upgrade.mdx
+++ b/doc/docs/upgrade.mdx
@@ -25,9 +25,10 @@ import Highlight from '@site/src/components/Highlight.js';
 
 具体升级详情请查看链接  **https://github.com/kimdiego2098/ThingsGateway/compare/v5...master**
 
-### 6.0.5.23
+### 6.0.5.24
 
 - &nbsp;<Tag>新增</Tag> 基础库增加 net8 编译项
+- &nbsp;<Tag>新增</Tag> SqlHisAlarm插件添加表名称配置属性
 - &nbsp;<Tag>调整</Tag> 默认server gc true，如有低内存需要，更改 MSBuild 项
 
 
