--- a/src/plugin/ThingsGateway.Plugin.DB/Locales/en-US.json
+++ b/src/plugin/ThingsGateway.Plugin.DB/Locales/en-US.json
@@ -83,6 +83,7 @@
   "ThingsGateway.Plugin.SqlHisAlarm.SQLHisAlarmProperty": {
     "DbType": "DbType",
     "BigTextConnectStr": "ConnectString",
+    "TableName": "TableName",
 
     "IsInterval": "IsInterval",
     "BusinessInterval": "BusinessInterval",
