refactor: 更新繁体资源

--- a/src/ThingsGateway.Server/Locales/zh-TW.json
+++ b/src/ThingsGateway.Server/Locales/zh-TW.json
@@ -10,33 +10,36 @@
     "LoginErrorh2": "登錄失敗",
     "LoginErrorc2": "請聯繫管理員!",
     "Logout": "登出",
-    "系統首頁": "系統首頁",
-    "權限管理": "權限管理",
-    "用戶管理": "用戶管理",
+
+
+    "系统首页": "系統首頁",
+    "权限管理": "權限管理",
+    "用户管理": "用戶管理",
     "角色管理": "角色管理",
-    "菜單管理": "菜單管理",
-    "系統運維": "系統運維",
-    "系統配置": "系統配置",
+    "菜单管理": "菜單管理",
+    "系统运维": "系統運維",
+    "系统配置": "系統配置",
     "字典管理": "字典管理",
-    "操作日誌": "操作日誌",
-    "會話管理": "會話管理",
+    "操作日志": "操作日誌",
+    "会话管理": "會話管理",
     "硬件信息": "硬件信息",
-    "網關管理": "網關管理",
+    "网关管理": "網關管理",
     "插件管理": "插件管理",
-    "插件調試": "插件調試",
+    "插件调试": "插件調試",
     "通道管理": "通道管理",
-    "採集設備": "採集設備",
-    "業務設備": "業務設備",
-    "變量管理": "變量管理",
-    "網關狀態": "網關狀態",
-    "設備狀態": "設備狀態",
-    "實時數據": "實時數據",
-    "實時警報": "實時警報",
-    "網關日誌": "網關日誌",
-    "後台日誌": "後台日誌",
-    "RPC日誌": "RPC日誌",
-    "物聯網關": "物聯網關",
-    "系統管理": "系統管理"
+    "采集设备": "採集設備",
+    "业务设备": "業務設備",
+    "变量管理": "變量管理",
+    "网关状态": "網關狀態",
+    "设备状态": "設備狀態",
+    "实时数据": "實時數據",
+    "实时报警": "實時警報",
+    "网关日志": "網關日誌",
+    "后台日志": "後台日誌",
+    "RPC日志": "RPC日誌",
+    "物联网关": "物聯網關",
+    "系统管理": "系統管理"
+
   },
   "ThingsGateway.Admin.Razor.AdminIndex": {
     "CollectDevice": "採集設備",
