--- a/src/adapter/ThingsGateway.Foundation.Dlt645/Locales/zh-TW.json
+++ b/src/adapter/ThingsGateway.Foundation.Dlt645/Locales/zh-TW.json
@@ -26,7 +26,7 @@
     "DataIdNotSame": "返回資料標誌不符合規則",
     "BaudRateError": "不支援此波特率 {0}",
     "CountError": "寫入參數數量不符合地址要求",
-    "DataIdError": "變數寄存器地址錯誤",
+    "DataIdError": "變量寄存器地址錯誤",
     "Error1": "其他錯誤",
     "Error2": "費率數超",
     "Error3": "日時段數超",
