--- a/src/plugin/ThingsGateway.Plugin.DB/Locales/en-US.json
+++ b/src/plugin/ThingsGateway.Plugin.DB/Locales/en-US.json
@@ -28,6 +28,7 @@
     "HisDBTableName": "HisDBTableName",
     "DbType": "DbType",
     "BigTextConnectStr": "ConnectString",
+    "BigTextScriptTabe": "DynamicScript",
 
     "IsInterval": "IsInterval",
     "BusinessInterval": "BusinessInterval",
