feat: 关系库存储插件支持动态表格式脚本

--- a/src/plugin/ThingsGateway.Plugin.DB/Locales/en-US.json
+++ b/src/plugin/ThingsGateway.Plugin.DB/Locales/en-US.json
@@ -28,7 +28,8 @@
     "HisDBTableName": "HisDBTableName",
     "DbType": "DbType",
     "BigTextConnectStr": "ConnectString",
-    "BigTextScriptTabe": "DynamicScript",
+    "BigTextScriptHisTable": "DynamicScriptHisTable",
+    "BigTextScriptRealTable": "DynamicScriptRealTable",
 
     "IsInterval": "IsInterval",
     "BusinessInterval": "BusinessInterval",
