--- a/doc/docs/upgrade.mdx
+++ b/doc/docs/upgrade.mdx
@@ -25,6 +25,17 @@ import Highlight from '@site/src/components/Highlight.js';
 
 具体升级详情请查看链接  **https://github.com/kimdiego2098/ThingsGateway/compare/v5...master**
 
+
+### 6.1.0.23
+
+- &nbsp;<Tag>新增</Tag> 繁体语言资源
+- &nbsp;<Tag>新增</Tag> 关系库存储插件支持动态表格式脚本
+- &nbsp;<Tag>新增</Tag> MqttCollect插件，支持mqtt采集
+
+- &nbsp;<Tag>调整</Tag> mqttServer不再保留全部变量遗嘱数据，可使用quest rpc获取
+
+- &nbsp;<Tag>修复</Tag> 修复多个错误
+
 ### 6.0.5.24
 
 - &nbsp;<Tag>新增</Tag> 基础库增加 net8 编译项
