--- a/src/plugin/ThingsGateway.Plugin.Mqtt/Locales/en-US.json
+++ b/src/plugin/ThingsGateway.Plugin.Mqtt/Locales/en-US.json
@@ -54,5 +54,36 @@
     "CacheFileMaxLength": "CacheFileMaxLength(mb)",
     "SplitSize": "SplitSize",
     "CacheEnable": "CacheEnable"
+  },
+
+  "ThingsGateway.Plugin.Mqtt.MqttCollectProperty": {
+    "IP": "IP",
+    "Port": "Port",
+    "IsWebSocket": "WebSocket",
+    "WebSocketUrl": "WebSocketUrl",
+    "UserName": "UserName",
+    "Password": "Password",
+    "ConnectId": "ConnectId",
+    "ConnectTimeout": "ConnectTimeout",
+    "DeviceRpcEnable": "DeviceRpcEnable",
+    "RpcWriteTopic": "RpcWriteTopic",
+    "RpcQuestTopic": "RpcQuestTopic",
+    "BigTextScriptDeviceModel": "BigTextScriptDeviceModel",
+    "BigTextScriptVariableModel": "BigTextScriptVariableModel",
+    "BigTextScriptAlarmModel": "BigTextScriptAlarmModel",
+    "IsDeviceList": "IsDeviceList",
+    "IsVariableList": "IsVariableList",
+    "IsAlarmList": "IsAlarmList",
+    "DeviceTopic": "DeviceTopic",
+    "VariableTopic": "VariableTopic",
+    "AlarmTopic": "AlarmTopic",
+    "IsInterval": "IsInterval",
+    "BusinessInterval": "BusinessInterval",
+    "IsAllVariable": "IsAllVariable",
+    "QueueMaxCount": "QueueMaxCount",
+    "CacheFileMaxLength": "CacheFileMaxLength(mb)",
+    "SplitSize": "SplitSize",
+    "CacheEnable": "CacheEnable"
   }
+
 }
