feat: 增加特殊地址变量，方便用户自定义设备状态变量或当前设备计算点

--- a/doc/docs/601.mdx
+++ b/doc/docs/601.mdx
@@ -148,3 +148,5 @@ public class TestCollectProperty : CollectPropertyBase
 ## 三、插件实现目的
 
 从上面可以看出，插件需开发者继承对应基类后，自行实现设备通讯，最终目的是按需更新设备/变量状态值
+
+CollectBase基类中，已经包含当前设备``CurrentDevice``,当前变量``CurrentDevice.VariableRunTimes``
